# clawblox-studio

./: .dockerignore  .gitignore  CHANGELOG.md  CLAWBLOX_USER_GUIDE.md  Dockerfile  README.md  clawblox_crucible_prompt.md  clawblox_full_test_obby_agent.py  clawblox_ram_decision_prompt.md  clawblox_rl_world1.py  clawblox_rl_world2.py  docker-compose.yml  electron-builder.yml  electron.vite.config.mjs  electron.vite.config.ts  eslint.config.js  index.html  obs_log_agent1_epoch0_step0.json  obs_log_agent1_epoch0_step10.json  obs_log_agent1_epoch0_step100.json  obs_log_agent1_epoch0_step110.json  obs_log_agent1_epoch0_step120.json  obs_log_agent1_epoch0_step130.json  obs_log_agent1_epoch0_step140.json  obs_log_agent1_epoch0_step150.json  obs_log_agent1_epoch0_step160.json  obs_log_agent1_epoch0_step170.json  obs_log_agent1_epoch0_step180.json  obs_log_agent1_epoch0_step190.json  obs_log_agent1_epoch0_step20.json  obs_log_agent1_epoch0_step30.json  obs_log_agent1_epoch0_step40.json  obs_log_agent1_epoch0_step50.json  obs_log_agent1_epoch0_step60.json  obs_log_agent1_epoch0_step70.json  obs_log_agent1_epoch0_step80.json  obs_log_agent1_epoch0_step90.json  obs_log_agent1_epoch1_step0.json  obs_log_agent1_epoch1_step10.json  obs_log_agent1_epoch1_step100.json  (+585 more)
sdk/clawblox-py/: README.md  pyproject.toml  test_sdk.py
sdk/clawblox-py/examples/: basic_agent.py  multi_agent.py  random_walk.py
sdk/clawblox-py/src/clawblox/: __init__.py  agent.py  client.py  exceptions.py  session.py  types.py
sdk/clawblox-py/src/clawblox_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
(+70 files in other folders)
